<resources>
    <string name="app_name">ComputerShop</string>
    <string name="add">Toevoegen</string>
    <string name="delete">Verwijderen</string>
    <string name="start_date">Startdatum&#8230;</string>
    <string name="end_date">Einddatum&#8230;</string>
    <string name="description">Omschrijving&#8230;</string>
    <string name="busy">Bezig</string>
    <string name="done">Klaar</string>
    <string name="ok">OK</string>
</resources>