<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.RepairActivity">

    <Button
        android:id="@+id/bStartDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_date" />

    <Button
        android:id="@+id/bEndDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/end_date" />

    <RadioGroup
        android:id="@+id/rgStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rbStatusBusy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/busy" />

        <RadioButton
            android:id="@+id/rbStatusDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/done" />

    </RadioGroup>

    <EditText
        android:id="@+id/etDescription"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="top"
        android:hint="@string/description" />

    <Button
        android:id="@+id/bOk"
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:text="@string/ok" />

</LinearLayout>